# osiris

./: .env.dist  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGES.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  aiop.json  bandit.yaml  osiris.py  pyproject.toml  pytest.ini  requirements.txt  tree.txt
.claude/skills/: README.md
.github/: CODEOWNERS
.github/workflows/: ci-mcp.yml  e2b-manual.yml  e2b-tests.yml  lint-security.yml  mcp-phase1-guards.yml  publish-pypi.yml  research.yml
components/: spec.schema.json
components/duckdb.processor/: spec.yaml
components/filesystem.csv_extractor/: spec.yaml
components/filesystem.csv_writer/: spec.yaml
components/graphql.extractor/: spec.yaml
components/mysql.extractor/: spec.yaml
components/mysql.writer/: spec.yaml
components/posthog.extractor/: spec.yaml
components/supabase.extractor/: spec.yaml
components/supabase.writer/: spec.yaml
demo/: DEMO_GUIDE.md  README.md  REPORT_EXPLANATION_GUIDE.md  cli.py  demo.py  interactive_demo.py  run_demo.py  test_quick.py  xyz.py
demo/assets/: context7_shopify_doc.md  mixpanel_events.csv  shopify_orders.csv  stripe_charges.csv  supabase_users.csv  zendesk_tickets.csv
demo/scripts/: build_html_report.py  fake_orchestrator.py  render_oml.py
demo/state/: registry.json  runlog.jsonl
demo/ui/: tui.py
docs/: COMPONENT_DEVELOPER_AUDIT.md  COMPONENT_DEVELOPMENT_AUDIT_2025-10-26.md  DOCUMENTATION_ADJUSTMENTS_SUMMARY.md  DOCUMENTATION_CLEANUP_PLAN.md  E2B_PRODUCTION_HARDENING_REPORT.md  FINDINGS-PENDING.md  MILESTONE_M2_SUMMARY.md  README.md  RESTRUCTURING_REPORT_2025-10-20.md  architecture.md  components-spec.md  dev-plan.md  e2b-vs-local-run-plan.md  e2b-vs-local-run.md  e2b_parity.md  final-e2b-vs-local-protocol.md  m0-validation-4.md  migration-guide.md  milestone-m1-actual-report.md  osiris-pitch.md  overview.md  pipeline-format.md  quickstart.md  repository-structure.md  sql-safety.md  todo.md
docs/AGENT-REPORTS/: SECURITY.md
docs/adr/: 0001-logging-configuration.md  0002-discovery-cache-fingerprinting.md  0003-session-scoped-logging.md  0004-configuration-precedence-engine.md  0005-component-specification-and-registry.md  0006-pipeline-runner-and-execution.md  0007-component-specification-and-capabilities.md  0008-component-registry.md  0009-secrets-handling-strategy.md  0010-e2b-integration-for-pipeline-execution.md  0011-osiris-roadmap.md  0012-separate-extractors-and-writers.md  0013-chat-retry-policy.md  0014-OML_v0.1.0-scope-and-schema.md  0015-compile-contract-determinism-fingerprints-nosecrets.md  0016-OML-Scheduling-Hints-and-Lightweight-Planner-(Proposed).md  0017-Memory-Store-Abstraction-(Proposed).md  0018-Agent-Call-Adapter-(Proposed).md  0019-chat-state-machine-and-oml-synthesis.md  0020-connection-resolution-and-secrets.md  0021-component-health-check-capability.md  0022-streaming-io-and-spill.md  0023-remote-object-store-writers.md  0024-component-packaging.md  0025-cli-ux-unification.md  0026-e2b-transparent-proxy.md  0027-ai-operation-package.md  0027-run-export-context-for-AI.md  0028-filesystem-contract.md  0028-git-integration.md  0029-memory.md  0030-agents.md  0031-oml-control-flow.md  0032-runtime-parameters-profiles.md  0033-resilience-retry-policies.md  0034-e2b-runtime-parity.md  0035-compiler-secret-detection.md  0036-mcp-interface.md  0037-mcp-llm-guidance.md  0040-connector-driver-architecture-inconsistency.md  (+5 more)
docs/architecture/: aiop.md
docs/archive/: CONCEPTS.md  README.md  component-interfaces.md  dev-plan.md  llms-cli.txt  llms-drivers.txt  llms-e2b.txt  llms.txt  module-connectors.md  module-drivers.md  module-runtime.md  repository-structure.md  seznam-pitch-cz.md
docs/design/: duckdb-codex-review-response.md  duckdb-doc-cleanup-plan.md  duckdb-prototype-learnings.md  phase1-foundation-complete.md  phase2-driver-migration-complete.md
docs/developer-guide/: COMPONENT-DOCS-MASTER-INDEX.md  README.md  components.md  discovery.md  e2b-runtime.md  llms-testing.txt  llms.txt  module-cli.md  module-components.md  module-remote.md  releasing.md
docs/examples/: README.md  aiop-sample.json  mysql_duckdb_supabase_append.yaml  mysql_duckdb_supabase_debug.yaml  mysql_duckdb_supabase_demo.yaml  mysql_to_local_csv_all_tables.yaml  mysql_to_supabase.yaml  mysql_to_supabase_all_tables.yaml  mysql_to_supabase_connections.yaml  osiris_connections.example.yaml  run-card-sample.md  sample_pipeline.yaml  supabase_to_mysql.yaml  top_customers_revenue.yaml
docs/guides/: filesystem-connections.md  mcp-overview.md  mcp-production.md
docs/mcp/: overview.md  tool-reference.md
docs/migration/: chat-to-mcp.md  mcp-v0.5-migration.md
docs/milestones/: AIOP_PATH_FIX_SUMMARY.md  BEFORE_AFTER_EVIDENCE.md  DELTA_CALCULATION_PATH_ANALYSIS.md  FILESYSTEM_CONTRACT_GENERALIZATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAP_ANALYSIS.md  README.md  ROOT_CAUSE_ANALYSIS_FIRST_RUN_BUG.md  _TEMPLATE.md  filesystem-contract-implementation-audit.md  filesystem-contract-v1-enforcement-index.md  m0-discovery-cache.md  m0-session-logs.md  m1-component-registry-and-runner.md  m1a.1-component-spec-schema.md  m1a.2-bootstrap-component-specs.md  m1a.3-component-registry.md  m1b-context-builder-and-validation.md  (+20 more)
examples/: demo_conversation.py  supabase_to_shopify_demo.yaml
osiris/: __init__.py
schemas/: logs_index.schema.json  logs_session.schema.json
scripts/: README.md  demo_conversation.py  e2b_doctor.py  migrate_index_manifest_hash.py  test-ci-guards.sh  test_cache_invalidation.py  test_chat_mysql_to_csv.py  test_m0_validation_4_manual.py  test_manual_transfer.py
testing_env/: .gitignore  README.md  osiris.yaml.backup  test_driver_run.py  test_duckdb_import.py
tests/: conftest.py  test_driver_auto_registration.py  test_e2e_mysql_supabase.py  test_html_report_e2b.py  test_phase1_duckdb_foundation.py  test_runner_config_cleaning.py  test_session_reader_totals.py  test_supabase_ddl_generation.py  test_supabase_writer_driver.py  test_validation_harness.py
(+576 files in other folders)
